website first try

--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
+<!-- this signifies that the file is in html -->
 <html lang="en">
+    <!-- code starts here and is written in English -->
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <!-- set title of website and other information between head tags -->
+        <meta charset="UTF-8">
+        <!-- use UTF-8 charset, which includes most characters -->
+        <title>Leonardo Gonzalez Navarro</title>
+        <link rel="stylesheet" href="style.css">
 
-	<title>SHPEtin@'s Website</title>
+    </head>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
-</head>
-
-<body>
-	<h1>Howdy, SHPEtin@!</h1>
-</body>
+    <body>
+    <!-- where most of the important code will go -->
+        <h1>Leonardo's Website</h1>
+    </body>
 
 </html>
