finished header (kinda) and added icons for github and linkedin

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-dark bg-dark">
             <!-- This div holds all the buttons in the navbar -->
-            <div class="container-fluid justify-content-center">
+            <div class="container-fluid justify-content-end">
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button1</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
@@ -34,19 +34,25 @@
 
         <!-- HEADER -->
         <div class="container-fluid" id="header">
-            <img id="headshot" src="img/IMG-2993.jpg" alt="Leonardo Gonzalez Navarro">
+            <img id="headshot" src="img/headshot.jpg" alt="Leonardo Gonzalez Navarro">
             <div id="text">
                 <h1>Howdy, I'm <br>Leo Gonzalez</h1>
                 <h2>Computer Science</h2>
 
                 <p>
-                    I am a rising Junior at Texas A&M University.<br>
-                    I am open to networking and am actively seeking internship opportunities for summer 2024.<br>
+                    I am a rising Junior at Texas A&M University open to networking<br>
+                    and am actively seeking internship opportunities for summer 2024.<br>
                     Check out my accomplishments and resume below!
                 </p>
-
-                <p>Email: <a href="mailto:leogonzalez@aggienetwork.com">leogonzalez@aggienetwork.com</a></p>
             </div>
+            <nav>
+                <form action="https://www.linkedin.com/in/leonardo-gonzaleznavarro/" target="_blank">
+                    <button id="linkedIn"><img src="img/linkedin.png"></button>
+                </form>
+                <form action="https://github.com/legona00" target="_blank">
+                    <button id="github"><img src="img/github.png"></button>
+                </form>
+            </nav>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
