--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <nav class="navbar navbar-dark bg-dark">
             <!-- This div holds all the buttons in the navbar -->
             <div class="container-fluid justify-content-end">
-                <button class="btn btn-outline-danger me-4 navButton" type="button">Button</button>
+                <form action="#aboutme">
+                    <button class="btn btn-outline-danger me-4 navButton" type="button">About Me</button>
+                </form>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button1</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button3</button>
@@ -35,29 +37,34 @@
         <!-- HEADER -->
         <div class="container-fluid" id="header">
             <img id="headshot" src="img/headshot.jpg" alt="Leonardo Gonzalez Navarro">
-            <div id="text">
-                <h1>Howdy, I'm <br>Leo Gonzalez</h1>
-                <h2>Computer Science</h2>
-
+            <div class="text">
+                <h1 style="margin-top: 100px; font-size: 60px;">Howdy, I'm <br>Leo Gonzalez</h1>
+                <h2>Junior in Computer Science</h2>
                 <p>
-                    I am a rising Junior at Texas A&M University open to networking<br>
-                    and am actively seeking internship opportunities for summer 2024.<br>
+                    Actively seeking internship opportunities for summer 2024<br>
+                    Eager to learn and gain high-level experience<br>
                     Check out my accomplishments and resume below!
                 </p>
             </div>
-            <nav>
-                <form action="https://www.linkedin.com/in/leonardo-gonzaleznavarro/" target="_blank">
-                    <button id="linkedIn"><img src="img/linkedin.png"></button>
-                </form>
-                <form action="https://github.com/legona00" target="_blank">
-                    <button id="github"><img src="img/github.png"></button>
-                </form>
-            </nav>
+            <a id="linkedIn" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/"><img src="img/linkedin.png"></a>
+            <a id="github" href="https://github.com/legona00"><img src="img/github.png"></a>
+        </div>
+
+        <div class="aboutme">
+            <img id="tamu" src="img/tamu.png" alt="Texas A&M">
+            <h3>ABOUT ME</h3>
+            <p style="text-align: center; color: gray;">Who Am I?</p>
+            <div class="text1">
+                <p>
+                    Computer Science student at Texas A&M University. <br>
+                    Aspiring fullstack developer.<br>
+                    Delivering quality work and eager to learn and grow
+                </p>
+            </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    
     </body>
 
 </html>
