added tamu logo and about me section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <nav class="navbar navbar-dark bg-dark">
             <!-- This div holds all the buttons in the navbar -->
             <div class="container-fluid justify-content-end">
-                <form action="#aboutme">
-                    <button class="btn btn-outline-danger me-4 navButton" type="button">About Me</button>
-                </form>
+                <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button"> About Me</a>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button1</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button3</button>
@@ -50,6 +48,7 @@
             <a id="github" href="https://github.com/legona00"><img src="img/github.png"></a>
         </div>
 
+        <a id="about-me"></a>
         <div class="aboutme">
             <img id="tamu" src="img/tamu.png" alt="Texas A&M">
             <h3>ABOUT ME</h3>
