--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             </div>
         </div>
 
+        <!-- Download Resume Button -->
+        <button type="button" class="btn btn-primary download-button" href="img/Final Resume.pdf" download>Download Resume
+            <img src="img/download.png">
+            <a href="file_path" download="img/Final_Resume.pdf"></a>
+        </button>
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
