resume button working

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </div>
 
         <!-- Download Resume Button -->
-        <button type="button" class="btn btn-primary download-button" href="img/Final Resume.pdf" download>Download Resume
+        <button type="submit" class="btn btn-primary download-button" onclick="window.open('img/Final_Resume.pdf')">
+            Download Resume&nbsp;
             <img src="img/download.png">
             <a href="file_path" download="img/Final_Resume.pdf"></a>
         </button>
