--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     </head>
 
-    <body>
+    <body onload="document.getElementById('defaultOpen').click();">
         <!-- where most of the important code will go -->
         
         <!-- NAVBAR -->
@@ -24,7 +24,7 @@
             <!-- This div holds all the buttons in the navbar -->
             <div class="container-fluid justify-content-end">
                 <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button"> About Me</a>
-                <button class="btn btn-outline-danger me-4 navButton" type="button">Button1</button>
+                <a class="btn btn-outline-danger me-4 navButton" href="#exper-ience" role="button">Experience</a>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button3</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Resume</button>
@@ -48,11 +48,12 @@
             <a id="github" href="https://github.com/legona00"><img src="img/github.png"></a>
         </div>
 
-        <a id="about-me"></a>
+        
         <div class="aboutme">
+            <a id="about-me"></a>
             <img id="tamu" src="img/tamu.png" alt="Texas A&M">
             <h3>ABOUT ME</h3>
-            <p style="text-align: center; color: gray;">Who Am I?</p>
+            <p style="text-align: center; color: gray; margin-top: -15px;">Who Am I?</p>
             <div class="text1">
                 <p>
                     Computer Science student at Texas A&M University. <br>
@@ -69,8 +70,61 @@
             <a href="file_path" download="img/Final_Resume.pdf"></a>
         </button>
 
+        <!-- Experience and Extracurriculars-->
+        <div class="experience">
+            <a id="exper-ience"></a>
+            <h4>EXPERIENCE</h4>
+            <p style="text-align: center; color: gray; margin-top: -15px;">How did I get here?</p>
+            <!-- Create tabs for work experience and extracurriculars-->
+            <div class="tab">
+                <button id="defaultOpen" class="tablinks active" onclick="openTab(event, 'Work')">Work &#9776;</button>
+                <button class="tablinks" onclick="openTab(event, 'Extracurriculars')">Extracurriculars &#9733;</button>
+            </div>
+
+            <div id="Work" class="tabcontent">
+                <div id="verticalLine">
+                    <span class="dot1"></span>
+                    <span class="dot2"></span>
+                    <span class="dot3"></span>
+                </div>
+                <p id="IT-Intern">
+                    IT Intern
+                    <p id="credihogar">Credihogar</p>
+                </p>
+
+                <p id="industrial-systems">
+                    Project Management <br>Intern
+                    <p id="RTR1">Rent The Runway</p>
+                </p>
+                <p id="project-manage">
+                    Industrial Systems<br> Intern
+                    <p id="RTR2">Rent The Runway</p>
+                </p>
+            </div>
+            <div id="Extracurriculars" class="tabcontent">
+                <div id="verticalLine"></div>
+            </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+
+        <!-- Display each tab -->
+        <script>
+            function openTab(evt, cityName) {
+              var i, tabcontent, tablinks;
+              tabcontent = document.getElementsByClassName("tabcontent");
+              for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+              }
+              tablinks = document.getElementsByClassName("tablinks");
+              for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+              }
+              document.getElementById(cityName).style.display = "block";
+              evt.currentTarget.className += " active";
+            }
+            </script>
     </body>
 
 </html>
