--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-dark bg-dark">
             <!-- This div holds all the buttons in the navbar -->
             <div class="container-fluid justify-content-end">
-                <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button"> About Me</a>
+                <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button">About Me</a>
                 <a class="btn btn-outline-danger me-4 navButton" href="#exper-ience" role="button">Experience</a>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
                 <button class="btn btn-outline-danger me-4 navButton" type="button">Button3</button>
@@ -89,20 +89,55 @@
                 </div>
                 <p id="IT-Intern">
                     IT Intern
-                    <p id="credihogar">Credihogar</p>
+                    <p id="credihogar">
+                        Credihogar<br>
+                        <em>June 2023-August 2023</em>
+                    </p>
                 </p>
 
                 <p id="industrial-systems">
                     Project Management <br>Intern
-                    <p id="RTR1">Rent The Runway</p>
+                    <p id="RTR1">
+                        Rent The Runway Inc.<br>
+                        <em>June 2023-August 2023</em>
+                    </p>
                 </p>
                 <p id="project-manage">
                     Industrial Systems<br> Intern
-                    <p id="RTR2">Rent The Runway</p>
+                    <p id="RTR2">
+                        Rent The Runway Inc.<br>
+                        <em>June 2022-August 2022</em>
+                    </p>
                 </p>
             </div>
+
             <div id="Extracurriculars" class="tabcontent">
-                <div id="verticalLine"></div>
+                <div id="verticalLine">
+                    <span class="dot1"></span>
+                    <span class="dot2"></span>
+                    <span class="dot3"></span>
+                </div>
+                <p id="Standards">
+                    VP of Standards
+                    <p id="FIA1">
+                        Phi Iota Alpha Fraternity Inc.<br>
+                        <em>April 2023-Present</em>
+                    </p>
+                </p>
+                <p id="tech-affairs">
+                    Technical Affairs Committee
+                    <p id="SHPE">
+                        Society of Hispanic Professional Engineers <br>
+                        <em>August 2022-Present</em>
+                    </p>
+                </p>
+                <p id="marketing">
+                    Director of Internal Marketing
+                    <p id="FIA2">
+                        Phi Iota Alpha Fraternity Inc.<br>
+                        <em>April 2022-April 2023</em>
+                    </p>
+                </p>
             </div>
         </div>
 
