--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="style.css">       
+        <link rel="stylesheet" href="style.css">  
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release-pro/v4.0.0/css/solid.css">     
 
     </head>
 
@@ -20,16 +21,13 @@
         <!-- where most of the important code will go -->
         
         <!-- NAVBAR -->
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-light" style="background-color:white;">
             <!-- This div holds all the buttons in the navbar -->
             <div class="container-fluid justify-content-end">
-                <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button">About Me</a>
-                <a class="btn btn-outline-danger me-4 navButton" href="#exper-ience" role="button">Experience</a>
-                <button class="btn btn-outline-danger me-4 navButton" type="button">Button2</button>
-                <button class="btn btn-outline-danger me-4 navButton" type="button">Button3</button>
-                <button class="btn btn-outline-danger me-4 navButton" type="button">Resume</button>
+                <a class="btn btn-outline-danger me-4 navButton" href="#about-me" role="button" style="color:black;">About Me</a>
+                <a class="btn btn-outline-danger me-4 navButton" href="#exper-ience" role="button" style="color:black;">Experience</a>
+                <a class="btn btn-outline-danger me-4 navButton" href="#projects" role="button" style="color:black;">Projects</a>
             </div>
-
         </nav>
 
         <!-- HEADER -->
@@ -140,6 +138,50 @@
                 </p>
             </div>
         </div>
+
+        <div class="projects">
+            <a id="projects"></a>
+            <h5>PROJECTS</h5>
+            <p style="text-align: center; color: gray; margin-top: -15px;">What have I done?</p>
+            <div class="standards-project">
+                <img src="img/phiotasBackground.png">
+                <div class="text-contain">
+                    <h6>
+                        Standards
+                    </h6>
+                    <div class="links">
+                        <a href="https://github.com/legona00/personal-website" class="stand-button" target="_blank">Github</a>
+                    </div>
+                    <p style="margin-left:10px;">
+                        Built a website to keep track of accumulated sanctions by members of the fraternity.
+                        Utilized google sheets and forms to collect attendance and excused absence forms
+                        Stored all data on google sheets, which update automatically once a mandatory event passed.
+                    </p>
+                </div>
+                <div class="code-type">
+                    <h6>
+                        Skills Required
+                    </h6>
+                    <ul>
+                        <li>Python</li>
+                        <li>JavaScript</li>
+                        <li>HTML and CSS</li>
+                        <li>Google Apps</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-bg">
+                <div>
+                    <h1 id="footer-text">Leo</h1>
+                    <h1 id="rights">© legona00.github.io/personal-website All right reserved</h1>
+                </div>
+                <a id="linkedIn-foot" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/"><img src="img/linkedin.png"></a>
+                <a id="github-foot" href="https://github.com/legona00"><img src="img/github.png"></a>
+            </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
