--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     Check out my accomplishments and resume below!
                 </p>
             </div>
-            <a id="linkedIn" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/"><img src="img/linkedin.png"></a>
-            <a id="github" href="https://github.com/legona00"><img src="img/github.png"></a>
+            <a id="linkedIn" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/" target="_blank"><img src="img/linkedin.png"></a>
+            <a id="github" href="https://github.com/legona00" target="_blank"><img src="img/github.png"></a>
         </div>
 
         
