--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <head>
         <!-- set title of website and other information between head tags -->
         <meta charset="UTF-8">
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
         <!-- use UTF-8 charset, which includes most characters -->
         <title>Leonardo Gonzalez Navarro</title>
 
