added Zelda project

--- a/index.html
+++ b/index.html
@@ -141,11 +141,35 @@
                 </p>
             </div>
         </div>
-
-        <div class="projects">
-            <a id="projects"></a>
+        <a id="projects"></a>
+        <div class="projects" style="width:100%;">
             <h5>PROJECTS</h5>
             <p style="text-align: center; color: gray; margin-top: -15px;">What have I done?</p>
+            <div class="zelda-project">
+                <img src="img/zelda.jpg">
+                <div class="text-contain">
+                    <h6>
+                        Legend of Zelda
+                    </h6>
+                    <div class="links">
+                        <a href="https://github.com/legona00/zelda" class="stand-button" target="_blank">Github</a>
+                    </div>
+                    <p style="margin-left:10px;">
+                        Created a game based on Legend of Zelda. Has functioning enemy AI, upgrade menu and player development system.
+                        Made using Python's pygame game development module and Tiled for level creation.<br><br>
+                    </p>
+                </div>
+                <div class="code-type">
+                    <h6>
+                        Skills Required
+                    </h6>
+                    <ul class="zelda-list">
+                        <li>Python</li>
+                        <li>Tiled</li>
+                        <li>Excel</li>
+                    </ul>
+                </div>
+            </div>
             <div class="standards-project">
                 <img src="img/phiotasBackground.png">
                 <div class="text-contain">
@@ -158,7 +182,7 @@
                     <p style="margin-left:10px;">
                         Built a website to keep track of accumulated sanctions by members of the fraternity.
                         Utilized google sheets and forms to collect attendance and excused absence forms
-                        Stored all data on google sheets, which update automatically once a mandatory event passed.
+                        Stored all data on google sheets, which update automatically once a<br> mandatory event passed.
                     </p>
                 </div>
                 <div class="code-type">
