--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta http-equiv='cache-control' content='no-cache'> 
         <meta http-equiv='expires' content='0'> 
         <meta http-equiv='pragma' content='no-cache'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <!-- use UTF-8 charset, which includes most characters -->
         <title>Leonardo Gonzalez Navarro</title>
 
@@ -17,7 +19,6 @@
         
         <link rel="stylesheet" href="style.css">  
         <link rel="stylesheet" href="https://unicons.iconscout.com/release-pro/v4.0.0/css/solid.css">     
-
     </head>
 
     <body onload="document.getElementById('defaultOpen').click();">
