--- a/index.html
+++ b/index.html
@@ -51,21 +51,35 @@
             <a id="linkedIn" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/" target="_blank"><img src="img/linkedin.png"></a>
             <a id="github" href="https://github.com/legona00" target="_blank"><img src="img/github.png"></a>
         </div>
-<!--
         <div class="aboutme">
             <a id="about-me"></a>
-            
-            <h3>ABOUT ME</h3>
-            <p style="text-align: center; color: gray; margin-top: -15px;">Who Am I?</p>
-            <img id="tamu" src="img/tamu.png" alt="Texas A&M">
-            <div class="text1">
-                <p>
-                    Computer Science student at Texas A&M University. <br>
-                    Aspiring fullstack developer.<br>
-                    Delivering quality work and eager to learn and grow
-                </p>
+            <h1> ABOUT ME</h1>
+            <p style="color:gray; font-size: small;">Who am I?</p>
+            <div class="container">
+                <div class="tamuPic">
+                    <img id="tamu" src="img/tamu.png" alt="Texas A&M">
+                </div>
+                <div class="aboutText">
+                    <p>
+                        Computer Science student at Texas A&M University. <br>
+                        Aspiring fullstack developer.<br>
+                        Delivering quality work and eager to learn and grow
+                    </p>
+                </div>
             </div>
         </div>
+
+        <button type="submit" class="btn btn-primary download-button" onclick="window.open('img/Final_Resume.pdf')">
+            Download Resume
+            <img src="img/download.png">
+            <a href="file_path" download="img/Final_Resume.pdf"></a>
+        </button>
+
+        <div class="experience">
+            <h1>EXPERIENCE</h1>
+            <p style="color: gray; font-size: small;">What have I done?</p>
+        </div>
+<!--
         <a id="exper-ience"></a>
          Download Resume Button
         <button type="submit" class="btn btn-primary download-button" onclick="window.open('img/Final_Resume.pdf')">
