--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     </head>
 
     <body onload="document.getElementById('defaultOpen').click();">
-        <!-- where most of the important code will go -->
-        
         <!-- NAVBAR -->
         <nav class="navbar navbar-light" style="background-color:white;">
             <!-- This div holds all the buttons in the navbar -->
@@ -77,49 +75,61 @@
 
         <div class="experience">
             <h1>EXPERIENCE</h1>
-            <p style="color: gray; font-size: small;">What have I done?</p>
-        </div>
-<!--
-        <a id="exper-ience"></a>
-         Download Resume Button
-        <button type="submit" class="btn btn-primary download-button" onclick="window.open('img/Final_Resume.pdf')">
-            Download Resume&nbsp;
-            <img src="img/download.png">
-            <a href="file_path" download="img/Final_Resume.pdf"></a>
-        </button>
-
-         Experience and Extracurriculars
-        <div class="experience">
-            
-            <h4>EXPERIENCE</h4>
-            <p style="text-align: center; color: gray; margin-top: -15px;">How did I get here?</p>
-            Create tabs for work experience and extracurriculars
+            <p style="color: gray; font-size: small;">How did I get here?</p>
             <div class="tab">
-                <button id="defaultOpen" class="tablinks active" onclick="openTab(event, 'Work')">Work &#9776;</button>
+                <button id="defaultOpen" class="tablinks active" onclick="openTab(event, 'Work')">Work &#9776</button>
                 <button class="tablinks" onclick="openTab(event, 'Extracurriculars')">Extracurriculars &#9733;</button>
             </div>
-
-            <div id="Work" class="tabcontent">
+            <!-- Display Work Experience-->
+            <div id="Work" class="tabcontent" style="display: none;">
                 <div id="verticalLine">
                     <span class="dot1"></span>
                     <span class="dot2"></span>
                     <span class="dot3"></span>
                 </div>
-                <p id="IT-Intern">
-                    IT Intern
-                    <p id="credihogar">
-                        Credihogar<br>
-                        <em>June 2023-August 2023</em>
-                    </p>
-                </p>
+                <div class="tabText">
+                    <div class="ITIntern">
+                        <p>
+                            IT Intern
+                        </p>
+                    </div>
+                    <div class="credihogar">
+                        <p>
+                            Credihogar<br>
+                            <em>June 2023-August 2023</em>
+                        </p>
+                    </div>
+                    <div class="project-management">
+                        <p>
+                            Project<br>Management<br>Intern
+                        </p>
+                    </div>
+                    <div class="RTR1">
+                        <p>
+                            Rent the Runway Inc.<br>
+                            <em>June 2023-August 2023</em>
+                        </p>
+                    </div>
+                    <div class="industrial-systems">  
+                        <p>
+                            Industrial Systems<br>Intern
+                        </p>
+                    </div>
+                    <div class="RTR2">
+                        <p>
+                            Rent the Runway Inc.<br>
+                            <em>June 2022-August 2022</em>
+                        </p> 
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--
+        <div class="experience">
 
-                <p id="industrial-systems">
-                    Project Management <br>Intern
-                    <p id="RTR1">
-                        Rent The Runway Inc.<br>
-                        <em>June 2023-August 2023</em>
-                    </p>
-                </p>
+
+            <div id="Work" class="tabcontent">
+
                 <p id="project-manage">
                     Industrial Systems<br> Intern
                     <p id="RTR2">
@@ -229,6 +239,20 @@
     -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-
+        <script>
+            function openTab(evt, cityName) {
+              var i, tabcontent, tablinks;
+              tabcontent = document.getElementsByClassName("tabcontent");
+              for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+              }
+              tablinks = document.getElementsByClassName("tablinks");
+              for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+              }
+              document.getElementById(cityName).style.display = "block";
+              evt.currentTarget.className += " active";
+            }
+        </script>
     </body>
 </html>
