fixed menu tabs

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <a id="linkedIn" href="https://www.linkedin.com/in/leonardo-gonzaleznavarro/" target="_blank"><img src="img/linkedin.png"></a>
             <a id="github" href="https://github.com/legona00" target="_blank"><img src="img/github.png"></a>
         </div>
+        <a id="about-me"></a>
         <div class="aboutme">
-            <a id="about-me"></a>
             <h1> ABOUT ME</h1>
             <p id="paragraph" style="color:gray; font-size: small;">Who am I?</p>
             <div class="container">
@@ -72,6 +72,7 @@
             Download Resume&nbsp; 
         </button>
 
+        <a id="exper-ience"></a>
         <div class="experience">
             <h1>EXPERIENCE</h1>
             <p id="paragraph" style="color: gray; font-size: small;">How did I get here?</p>
@@ -165,6 +166,7 @@
             </div>
         </div>
 
+        <a id="projects"></a>
         <div class="projects">
             <h1>PROJECTS</h1>
             <p id="paragraph" style="color: gray; font-size: small; text-align: center;">What have I done?</p>
