--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
             </div>
             <!-- Display Work Experience-->
             <div id="Work" class="tabcontent" style="display: none;">
+                <span class="dot1"></span>
+                <span class="dot2"></span>
+                <span class="dot3"></span>
                 <div id="verticalLine">
-                    <span class="dot1"></span>
-                    <span class="dot2"></span>
-                    <span class="dot3"></span>
+                    
                 </div>
                 <div class="tabText">
                     <div class="right1">
@@ -125,11 +126,10 @@
             </div>
 
             <div id="Extracurriculars" class="tabcontent">
-                <div id="verticalLine">
-                    <span class="dot1"></span>
-                    <span class="dot2"></span>
-                    <span class="dot3"></span>
-                </div>
+                <span class="dot1"></span>
+                <span class="dot2"></span>
+                <span class="dot3"></span>
+                <div id="verticalLine"></div>
                 <div class="tabText">
                     <div class="right1">
                         <p>
