--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
             <div class="text" style="display: inline-block;">
                 <h6>Howdy, I'm <br>Leo Gonzalez</h6>
-                <h2>Junior in Computer Science</h2>
+                <h2>Senior Computer Science Major</h2>
                 <p id="paragraph" style="color:gray; font-size: small;">
-                    Actively seeking internship opportunities for summer 2024<br>
+                    Actively seeking fulltime opportunities starting in 2026<br>
                     Eager to learn and gain high-level experience<br>
                     Check out my accomplishments and resume below!
                 </p>
@@ -59,15 +59,13 @@
                 </div>
                 <div class="aboutText">
                     <p id="paragraph">
-                        Computer Science student at Texas A&M University. <br>
-                        Aspiring fullstack developer.<br>
-                        Delivering quality work and eager to learn and grow
+                        I am a software engineer from Frisco, TX. I specialize in developing scalable backend systems and cloud infrastructure
                     </p>
                 </div>
             </div>
         </div>
 
-        <a href="file_path" download="img/Final_Resume.pdf"></a>           
+        <a href="file_path" download="img/RESUME LEO GONZALEZ.pdf"></a>           
         <button type="submit" class="btn btn-primary download-button" onclick="window.open('img/Final_Resume.pdf')">
             Download Resume&nbsp; 
         </button>
@@ -91,13 +89,13 @@
                 <div class="tabText">
                     <div class="right1">
                         <p>
-                            IT Intern
+                            Software Engineering Intern
                         </p>
                     </div>
                     <div class="right1sub">
                         <p>
-                            Credihogar<br>
-                            <em>June 2023-August 2023</em>
+                            J.P. Morgan Chase<br>
+                            <em>June 2024-August 2024</em>
                         </p>
                     </div>
                     <div class="left1">
@@ -113,13 +111,13 @@
                     </div>
                     <div class="right2">  
                         <p>
-                            Industrial Systems<br>Intern
+                            Data Analysis<br>Intern
                         </p>
                     </div>
                     <div class="right2sub">
                         <p>
-                            Rent the Runway Inc.<br>
-                            <em>June 2022-August 2022</em>
+                            Credihogar LLC.<br>
+                            <em>June 2023-October 2023</em>
                         </p> 
                     </div>
                 </div>
@@ -176,44 +174,44 @@
                 <div class="text-contain">
                     <h3>Standards</h3>
                     <div class="links">
-                        <a href="https://github.com/legona00/tamufiastandards" class="stand-button" target="_blank">Github</a>
-                        <a href="https://script.google.com/macros/s/AKfycbyFLjr_kjSyoRCUQIT16Qh4J7jgWn1RFNv2pwuKrfg/dev" class="stand-button" target="_blank">Web App</a>
+                        <a href="https://github.com/legona00/standardswebsite" class="stand-button" target="_blank">Github</a>
+                        <a href="https://script.google.com/macros/s/AKfycbyFLjr_kjSyoRCUQIT16Qh4J7jgWn1RFNv2pwuKrfg/dev" class="stand-button" target="_blank">Deployment</a>
                     </div>
                     <p>
-                        Built a website to keep track of accumulated sanctions by members of the fraternity.
-                        Utilized google sheets and forms to collect attendance and excused absence forms
-                        Stored all data on google sheets, which update automatically once a mandatory event passed.
+                        A fullstack application to automate the Vice President of Standards position for my student organization. My first true fullstack application that I developed by myself
                     </p>
                 </div>
                 <div class="code-type">
                     <h3>Skills Required</h3>
                     <ul>
-                        <li>Python</li>
-                        <li>JavaScript</li>
-                        <li>HTML & CSS</li>
-                        <li> Google Apps</li>
+                        <li>AWS API Gateway</li>
+                        <li>Lambda</li>
+                        <li>S3</li>
+                        <li>DynamoDB</li>
+                        <li>React</li>
+                        <li>Node.js</li>
                     </ul>
                 </div>
             </div>
             <div class="projectBox">
-                <img src="img/zelda.jpg">
+                <img src="img/engr216.png">
                 <div class="text-contain">
-                    <h3>Legend of Zelda</h3>
+                    <h3>ENGR 216 Practice Portal</h3>
                     <div class="links">
-                        <a href="https://github.com/legona00/zelda" class="stand-button" target="_blank">Github</a>
+                        <a href="https://github.com/tamu-edu-students/engr-216-practice-problem-generator" class="stand-button" target="_blank">Github</a>
+                        <a href="https://engr216problemgenerator-ad40d0114d16.herokuapp.com/welcome/index" class="stand-button" target="_blank">Deployment</a>
                     </div>
                     <p>
-                        Created a game based on Legend of Zelda. 
-                        Has functioning enemy AI, upgrade menu and player development system. 
-                        Made using Python's pygame game development module and Tiled for level creation.
+                        An application to help freshman students taking the course ENGR 216. I led a group of computer science students to develop this so students could use it to study for their exams and so instructors could upload sample questions for students
                     </p>
                 </div>
                 <div class="code-type">
                     <h3>Skills Required</h3>
                     <ul>
-                        <li>Python</li>
-                        <li>Tiled</li>
-                        <li>Excel</li>
+                        <li>Ruby on Rails</li>
+                        <li>PostgreSQL</li>
+                        <li>Figma</li>
+                        <li>GitHub Actions</li>
                     </ul>
                 </div>
             </div>
