Added deployment for standards

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <h3>Standards</h3>
                     <div class="links">
                         <a href="https://github.com/legona00/standardswebsite" class="stand-button" target="_blank">Github</a>
-                        <a href="https://script.google.com/macros/s/AKfycbyFLjr_kjSyoRCUQIT16Qh4J7jgWn1RFNv2pwuKrfg/dev" class="stand-button" target="_blank">Deployment</a>
+                        <a href="http://standardswebsite.s3-website.us-east-2.amazonaws.com/" class="stand-button" target="_blank">Deployment</a>
                     </div>
                     <p>
                         A fullstack application to automate the Vice President of Standards position for my student organization. My first true fullstack application that I developed by myself
